be search by name function

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,26 +1,26 @@
 {
-  "name": "backend",
+  "name": "dish-search-api",
   "version": "1.0.0",
-  "main": "server.ts",
+  "description": "API tìm kiếm món ăn",
+  "main": "dist/app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/app.js",
+    "dev": "ts-node-dev --respawn src/server.ts",
+    "build": "tsc"
   },
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
+    "@types/cors": "^2.8.17",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mysql": "^2.18.1",
     "mysql2": "^3.11.4"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.17",
+    "@types/body-parser": "^1.19.2",
     "@types/express": "^5.0.0",
     "@types/node": "^22.9.3",
-    "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
   }
 }
