--- a/backend/package.json
+++ b/backend/package.json
@@ -22,5 +22,8 @@
     "@types/node": "^22.9.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
-  }
+  },
+  "bin" : {
+    "execute" : "server.ts"
+} 
 }
