--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,9 @@
   "name": "dish-search-api",
   "version": "1.0.0",
   "description": "API tìm kiếm món ăn",
-  "main": "dist/app.js",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "node dist/app.js",
+    "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn src/server.ts",
     "build": "tsc"
   },
