--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "dish-search-api",
   "version": "1.0.0",
   "description": "API tìm kiếm món ăn",
-  "main": "src/server.ts",
+  "main": "dist/server.js",
   "scripts": {
     "start": "node dist/server.js",
     "dev": "ts-node-dev --respawn src/server.ts",
@@ -22,8 +22,5 @@
     "@types/node": "^22.9.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
-  },
-  "bin" : {
-    "execute" : "server.ts"
-} 
+  }
 }
