--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.11.4"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/express": "^5.0.0",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.9.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
