--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,22 @@
   },
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
+    "@types/bcrypt": "^5.0.2",
     "@types/body-parser": "^1.19.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.2"
